--- a/app/views/clients/cds/show.html.erb
+++ b/app/views/clients/cds/show.html.erb
@@ -75,7 +75,7 @@
                                  <div class="show-item">
                                         <h4 class="subject-bar">税込価格</h4>
                                         <div class="show-info-item">
-                                                <%= (@cd.price*1.08).floor %>
+                                                ¥<%= (@cd.price*1.08).floor %>
                                         </div>
                                 </div>
                                 <div class="show-item">
