--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,19 +25,19 @@
         <ul class="nav navbar-nav navbar-right">
           <% if admin_signed_in? %>
             <li>
-              <%= link_to "商品一覧", admins_cds_path %>
+              <div class="head-back"><%= link_to "商品一覧", admins_cds_path %></div>
             </li>
             <li>
-              <%= link_to "商品追加", new_admins_cd_path %>
+              <div class="head-back"><%= link_to "商品追加", new_admins_cd_path %></div>
             </li>
             <li>
-              <%= link_to "顧客一覧", admins_clients_path %>
+              <div class="head-back"><%= link_to "顧客一覧", admins_clients_path %></div>
             </li>
             <li>
-              <%= link_to "顧客購入履歴", admins_orders_path %>
+              <div class="head-back"><%= link_to "顧客購入履歴", admins_orders_path %></div>
             </li>
             <li>
-              <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+              <div class="head-back"><%= link_to "ログアウト", destroy_admin_session_path, method: :delete %></div>
             </li>
             <div class="text-right login-status">管理者でログイン中</div>
 
