--- a/app/views/clients/orders/buy.html.erb
+++ b/app/views/clients/orders/buy.html.erb
@@ -65,7 +65,7 @@
 <p>アーティスト名：<%= item.cd.artist.artist_name %></p>
 <p>ジャンル名：<%= item.cd.genre.genre_name %></p>
 <p>レーべル名：<%= item.cd.label.label_name %></p>
-<p>税込価格：<%= (item.cd.price*1.08).floor %></p>
+<p>税込価格：¥<%= (item.cd.price*1.08).floor %></p>
 </div>
 <div class="col-lg-3 date">
 	<p>収録曲
