--- a/app/views/clients/cds/show.html.erb
+++ b/app/views/clients/cds/show.html.erb
@@ -66,7 +66,7 @@
                                         <h4 class="subject-bar">ステータス</h4>
                                         <div class="show-info-item">
                                                 <% if @cd.stock <= 0 %>
-                                                <%= "販売停止" %>
+                                                <%= "販売停止中" %>
                                                 <% else %>
                                                 <%= @cd.sale_status %>
                                                 <% end %>
