[add_page_top_character]

--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -47,7 +47,7 @@
 	</table>
 	<span id="back">
 		<a href="#">
-			<%= image_tag "arrow.png"  %></a>
+			<%= image_tag "page-top.png", height:'125' %></a>
 	</span>
 	<div class="kaminari-page">
 		<%= paginate @orders %>
