--- a/app/views/clients/cds/search.html.erb
+++ b/app/views/clients/cds/search.html.erb
@@ -20,7 +20,7 @@
     </div>
     <span id="back">
     	<a href="#">
-    		<%= image_tag "arrow.png"  %>
+    		<%= image_tag "page-top.png", height:'125' %>
 	    </a>
     </span>
 </div>
