--- a/app/views/clients/orders/index.html.erb
+++ b/app/views/clients/orders/index.html.erb
@@ -42,7 +42,7 @@
 			<h2 class="space">総計金額 ￥<%= @total_price %></h2>
 			<span id="back">
 				<a href="#">
-					<%= image_tag "arrow.png"  %>
+					<%= image_tag "page-top.png", height:'125' %>
 				</a>
 			</span>
 		</div>
