--- a/app/views/admins/cds/index.html.erb
+++ b/app/views/admins/cds/index.html.erb
@@ -53,7 +53,7 @@
 
 <span id="back">
 	<a href="#">
-		<%= image_tag "arrow.png"  %>
+		<%= image_tag "page-top.png", height:'125' %>
 	</a>
 </span>
 
