--- a/app/views/admins/clients/show.html.erb
+++ b/app/views/admins/clients/show.html.erb
@@ -97,7 +97,7 @@
 				</div>
 				<span id="back">
 					<a href="#">
-						<%= image_tag "arrow.png"  %>
+						<%= image_tag "page-top.png", height:'125' %>
 					</a>
 				</span>
 			</div>
