--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@charset 'UTF-8';
 
 /* bootstrapを無効化 */
 * {
@@ -41,9 +42,10 @@ h1, h2, h3, h4, h5, h6, p{
   height: 70px;
   text-align: center;
   line-height: 8rem;
-  background: -moz-radial-gradient(#51e8df, #51e8df);
-  background: -webkit-radial-gradient(#67ffb7, #51e8df);
-  background: radial-gradient(#51e864, #51e8df);
+ /* background: -moz-radial-gradient(#51e8df, #51e8df);
+  background: -webkit-radial-gradient(#67ffb7, #51e8df);*/
+  /*background: radial-gradient(#51e864, #51e8df);*/
+  background-color: #fff;
   margin-top: auto;
 }
 
@@ -286,4 +288,46 @@ td{
   margin-top: 50px;
   margin-right: auto;
   margin-left: auto;
+}
+header{
+  position:relative;
+}
+.navbar{
+  background:#fff;
+  border:none;
+}
+.login-status{
+  position: absolute;
+  top:50px;
+  right:100px;
+}
+.head-back{
+  height:73px;
+  margin: 0 10px;
+  padding-top: 20px;
+}
+.head-t{
+  color:#6c6b6b;
+}
+/*.head-t:hover{
+  color:#f0fff6;
+}*/
+.head-li:hover{
+  background:#67ffb7;
+}
+
+footer{
+  background:#fff;
+}
+.nagareco-inc{
+  color:#6c6b6b;
+}
+body{
+  font-family: ‘Helvetica’,‘Arial’,‘Hiragino Kaku Gothic ProN’,‘ヒラギノ角ゴ ProN W3’,’メイリオ’, Meiryo,’ＭＳ Ｐゴシック’,’MS PGothic;
+}
+@font-face{
+  font-family:"iroha";
+  src:font-url("irohamaru-Medium.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
