--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,20 +24,20 @@
         </nav>
         <ul class="nav navbar-nav navbar-right">
           <% if admin_signed_in? %>
-            <li>
-              <div class="head-back"><%= link_to "商品一覧", admins_cds_path %></div>
+            <li class="head-li">
+              <div class="head-back"><%= link_to "商品一覧", admins_cds_path, class:"head-t" %></div>
             </li>
-            <li>
-              <div class="head-back"><%= link_to "商品追加", new_admins_cd_path %></div>
+            <li class="head-li">
+              <div class="head-back"><%= link_to "商品追加", new_admins_cd_path, class:"head-t" %></div>
             </li>
-            <li>
-              <div class="head-back"><%= link_to "顧客一覧", admins_clients_path %></div>
+            <li class="head-li">
+              <div class="head-back"><%= link_to "顧客一覧", admins_clients_path, class:"head-t" %></div>
             </li>
-            <li>
-              <div class="head-back"><%= link_to "顧客購入履歴", admins_orders_path %></div>
+            <li class="head-li">
+              <div class="head-back"><%= link_to "顧客購入履歴", admins_orders_path, class:"head-t" %></div>
             </li>
-            <li>
-              <div class="head-back"><%= link_to "ログアウト", destroy_admin_session_path, method: :delete %></div>
+            <li class="head-li">
+              <div class="head-back"><%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class:"head-t" %></div>
             </li>
             <div class="text-right login-status">管理者でログイン中</div>
 
