--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -305,3 +305,9 @@ td{
   margin-right: auto;
   margin-left: auto;
 }
+
+.kaminari-page{
+  font-size: 30px;
+  text-align: center;
+  margin: 20px 0;
+}
