--- a/app/views/clients/orders/buy.html.erb
+++ b/app/views/clients/orders/buy.html.erb
@@ -11,8 +11,8 @@
 				<div>
 					<label class="label-buy">
 						<%= f.radio_button :client_id,@client.id, id: "one", checked: "checked" %>
-							<% zyusyo1 = @client.last_name + @client.first_name + @client.post_code + @client.address %>
-								<%= zyusyo1 %>
+							<%= @client.last_name %><span> </span> <%=@client.first_name%> <span> </span> <%=@client.post_code%> <span> </span> <%=@client.address %>
+							
 					</label>
 				</div>
 
@@ -21,8 +21,8 @@
 					<div>
 						<label class="label-buy">
 						<%= f.radio_button :shipping_address, t.id, class: "two" %>
-						<% zyusyo = t.last_name + t.first_name + t.sub_post_code + t.sub_address %>
-							<%= zyusyo %>
+						<%= t.last_name%> <span> </span> <%=t.first_name%><span> </span> <%=t.sub_post_code%><span> </span> <%=t.sub_address %>
+						
 						</label>
 					</div>
 				<% end %>
